# LeetCode-Problems

./: .changie.yaml  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml
.changes/: v0.10.0.md  v0.11.0.md  v0.12.0.md  v0.13.0.md  v0.13.1.md  v0.14.0.md  v0.15.0.md  v0.16.0.md  v0.17.0.md  v0.18.0.md  v0.19.0.md  v0.8.10.md  v0.9.0.md
.changes/unreleased/: Daily-Added-20230617-003038.yaml  Daily-Added-20230618-153026.yaml  Daily-Added-20230618-165541.yaml  Daily-Added-20230622-222810.yaml  Daily-Added-20230625-232241.yaml  Daily-Added-20230625-232508.yaml  Daily-Added-20230626-190512.yaml  Daily-Added-20230701-124917.yaml  Daily-Added-20230701-132116.yaml  Daily-Added-20230701-142156.yaml  Daily-Added-20230701-190717.yaml  Daily-Added-20230705-220144.yaml  Daily-Added-20230705-220152.yaml  Daily-Added-20230708-033237.yaml  Daily-Added-20230708-152549.yaml  Daily-Added-20230708-155113.yaml  Daily-Added-20230709-141713.yaml  Organizational-Added-20230705-220236.yaml  Organizational-Added-20230709-145824.yaml  Study-Added-20230722-125430.yaml  Study-Added-20230722-125908.yaml  Study-Added-20240330-183524.yaml  Weekly-Added-20230622-222751.yaml  Weekly-Added-20230709-145811.yaml
algorithms/: Makefile
algorithms/3sum/: 3sum.cpp  README.md
algorithms/3sum_closest/: 3sum_closest.cpp  README.md
algorithms/4sum/: 4sum.cpp  README.md
algorithms/add_two_nums/: add_two_nums.cpp
algorithms/atoi/: README.md  atoi.cpp
algorithms/avg_min_dist/: average_dist_arr.py
algorithms/balanced_bin_tree/: balanced_binary_tree.py  examples.txt
algorithms/balloons/: min_arrows_for_balloons.py
algorithms/bin_tree_factor/: tree_with_factors.py
algorithms/bst_from_preorder/: search_tree_from_preorder.py
algorithms/character_frequency/: sort_char_freq.py
algorithms/common_prefix/: README.md  common_prefix.cpp
algorithms/confusing_num/: confusing_num.py
algorithms/contiguous_array_sum/: array_sum.py
algorithms/find_mountain_arr/: find_in_mountain_arr.py
algorithms/image_overlap/: overlap_image.py
algorithms/int_roman/: README.md  int_roman.cpp
algorithms/kth_sorted_matrix/: smallest_sorted_matrix.py
algorithms/letter_phone/: README.md  phone.cpp
algorithms/lswrc/: lswrc.cpp
algorithms/max_cake_cuts/: examples.txt  max_cake_after_cuts.py
algorithms/max_score/: score_split_string.py
algorithms/max_unit_truck/: examples.txt  max_unit_truck.py
algorithms/min_cost_stairs/: examples.txt  min_cost_stairs.py
algorithms/min_rounds/: all_tasks.py
algorithms/minimize_maximum/: min_max_array.py
algorithms/monotonic/: examples.txt  monotonic_array.py
algorithms/most_water/: README.md  most_water.cpp
algorithms/my_calendar/: my_calendar_one.py
algorithms/nth_node/: README.md  nth_node.cpp
algorithms/optimal_partition/: optimal_str_part.py
algorithms/palindrome_number/: README.md  palindrome_number.cpp
algorithms/power_int/: power_integer.py
algorithms/regex/: regex_match.py
algorithms/repeat_substring/: examples.txt  repeat_substring_patt.py
algorithms/roman_int/: README.md  roman_int.cpp
algorithms/similar_words/: sentence_similarity.py
algorithms/spellchecker/: vowel_spellchecker.py
algorithms/squirrels/: squirrel_simulation.py
algorithms/strstr/: examples.txt  str_str.py
algorithms/two_sum/: two_sum.cpp
algorithms/unique_paths/: uniq.py
algorithms/valid_paren/: valid_parentheses.py
algorithms/validate_bst/: validate_search_tree.py
algorithms/zigzag/: README.md  zigzag.cpp
challenges/april_2023/daily/: btree_width.py  coins_from_piles.py  color_val_dag.py  graph_clone.py  num_boats.py  profit_scheme.py  spell_potion_success.py  star_string.py  valid_parentheses.py  zigzag_btree.py
challenges/april_2023/weekly/: anagram_map.py  word_distance.py
challenges/april_2025/daily/: count_good_nums.py  count_good_subarray.py  count_good_triplet.py
challenges/april_2025/weekly/: count_connected_comp.py
challenges/january_2025/daily/: prefix_common_array.py  word_subsets.py
daily_challenges/april/: btree_width.py  coins_from_piles.py  color_val_dag.py  enclaves.py  graph_clone.py  long_palindrome_subseq.py  num_boats.py  profit_scheme.py  spell_potion_success.py  star_string.py  valid_parentheses.py  zigzag_btree.py
daily_challenges/july/: course_schedule.py  maximize_exam_confusion.py  min_size_subarray_sum.py
daily_challenges/june/: count_all_routes.py  count_negatives_sorted_matrix.py  hire_k_workers.py  increasing_path_grid.py  k_radius_subarray_avg.py  last_day_cross.py  max_level_sum_tree.py  max_val_index_bounded_array.py  min_cost_array_eq.py  min_flips_or_equal.py  path_max_prob.py  sell_buy_stocks_fee.py  short_path_keys.py  ways_reorder_bst.py
daily_challenges/may/: k_freq_elements.py
design/: small_inf_set.py
design/browser_history/: browser.py
design/small_inf_set/: small_inf_set.py
design/snapshot_array/: snapshot.py
design/string_network/: encode_decode.py
design/word_search/: dictionary.py
study_plans/essential_dynamic_prog/: buy_sell_stock_3.py  coin_change.py  coin_change_2.py  combination_sum_4.py  count_vowel_permutation.py  decode_ways.py  delete_earn.py  distinct_subseq.py  domino_tromino_tile.py  edit_dist.py  falling_min_path.py  house_robber.py  house_robber_3.py  long_common_subseq.py  long_incr_subseq.py  long_palindrome_str.py  longest_chain_pair.py  longest_given_arith_subseq.py  longest_obstacle_course.py  max_path_sum_bin_tree.py  max_val_from_coin_piles.py  maximal_square.py  min_ascii_delete.py  min_path_sum.py  min_steps_palindrome.py  min_ticket_cost.py  num_lis.py  ones_zeroes.py  paint_house.py  paint_house_2.py  perfect_squares.py  russian_envelopes.py  sell_buy_stock_4.py  sell_buy_stock_cd.py  solving_brainpower.py  triangle.py  uncrossed_lines.py  unique_bst.py  unique_bst_2.py  unique_paths_2.py  (+1 more)
weekly_challenges/april/: anagram_map.py  word_distance.py
weekly_challenges/july/: substr_k_distinct_chars.py
weekly_challenges/june/: sum_bst.py  toss_strange_coins.py  univalue_subtree.py
weekly_challenges/may/: meeting_rooms_2.py
(+219 files in other folders)
